tests/snapshots/examples_basics/mini_database.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/mini_database.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/basics/mini_database.flx:57:27
   |
57 |         {"id": 1, "name": "Alice", "age": 30},
   |                           ^^^^^^^
   |                           ------- this expression has type `String`

   |                           ------- this type mismatch is reported here

Note:
  expected type: Int
  found type: String
  the conflicting types meet at this expression

Help:
  These two types are not compatible.
== stdout ==
<not executed>
